wip: server and client updates, todo metadata changes
