# docs/swagger.yaml
@@ -18,6 +18,28 @@ definitions:
     - api_key_role
     - api_key_user_id
     type: object
+  domain.Client:
+    properties:
+      name:
+        description: Name is the player name
+        type: string
+      playerID:
+        description: PlayerID is the primary key of the Player
+        type: integer
+      playerState:
+        description: PlayerState specifies the player state
+        type: integer
+      role:
+        description: Role specifies the player role from the server
+        type: integer
+      server:
+        allOf:
+        - $ref: '#/definitions/domain.Server'
+        description: Server is who the Player belongs to
+      serverID:
+        description: ServerID is the foreign key
+        type: integer
+    type: object
   domain.Resource:
     properties:
       can_download:
@@ -135,6 +157,10 @@ definitions:
     type: object
   domain.Server:
     properties:
+      clients:
+        items:
+          $ref: '#/definitions/domain.Client'
+        type: array
       description:
         type: string
       has_password:
@@ -145,6 +171,8 @@ definitions:
         type: string
       is_visible:
         type: boolean
+      last_sync_time:
+        type: integer
       max_clients:
         type: integer
       name:
@@ -158,7 +186,7 @@ definitions:
       server_id:
         type: integer
       server_state:
-        $ref: '#/definitions/domain.ServerStatus'
+        type: string
       version:
         type: string
     required:
@@ -171,18 +199,6 @@ definitions:
     - port
     - version
     type: object
-  domain.ServerStatus:
-    enum:
-    - 1
-    - 2
-    - 3
-    - 4
-    type: integer
-    x-enum-varnames:
-    - StatusOnline
-    - StatusOffline
-    - StatusHidden
-    - StatusCrashed
   domain.User:
     properties:
       avatar_urls: {}
@@ -789,6 +805,29 @@ paths:
       - server
   /servers/{server}/power:
     patch:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/router.RequestError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/router.RequestError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/router.RequestError'
+      tags:
+      - server
+  /servers/{server}/sync:
+    put:
       consumes:
       - application/json
       produces:
