# domain/server.go
@@ -20,32 +20,35 @@ import (
 )
 
 type Server struct {
-	ServerID    int          `gorm:"primaryKey;autoIncrement" json:"server_id,omitempty"`
-	ServerState ServerStatus `gorm:"type:smallint" json:"server_state,omitempty"`
-	Name        string       `gorm:"size:255;not null" json:"name" binding:"required"`
-	IP          string       `gorm:"size:255;not null" json:"ip" binding:"required"`
-	Port        int          `gorm:"not null" json:"port" binding:"required"`
-	Version     string       `gorm:"size:100;not null" json:"version" binding:"required"`
-	Description string       `gorm:"type:text;not null" json:"description" binding:"required"`
-	IconUrl     string       `gorm:"size:255" json:"icon_url"`
-	OwnerID     int          `gorm:"not null" json:"owner_id"`
-	HasPassword *bool        `gorm:"not null" json:"has_password" binding:"required"`
-	MaxClients  uint         `gorm:"not null" json:"max_clients" binding:"required"`
-	IsVisible   *bool        `gorm:"not null" json:"is_visible" binding:"required"`
-	ServerDate  uint         `gorm:"autoCreateTime" json:"server_date,omitempty"`
+	ServerID       int          `gorm:"primaryKey;autoIncrement" json:"server_id,omitempty"`
+	ServerState    ServerStatus `gorm:"not null" json:"server_state,omitempty"`
+	Name           string       `gorm:"size:255;not null" json:"name" binding:"required"`
+	IP             string       `gorm:"size:255;not null" json:"ip" binding:"required"`
+	Port           int          `gorm:"not null" json:"port" binding:"required"`
+	Version        string       `gorm:"size:100;not null" json:"version" binding:"required"`
+	Description    string       `gorm:"type:text;not null" json:"description" binding:"required"`
+	IconUrl        string       `gorm:"size:255" json:"icon_url"`
+	OwnerID        int          `gorm:"not null" json:"owner_id"`
+	HasPassword    *bool        `gorm:"not null" json:"has_password" binding:"required"`
+	MaxClients     uint         `gorm:"not null" json:"max_clients" binding:"required"`
+	Clients        []Client     `gorm:"foreignKey:ServerID;constraint:OnDelete:CASCADE" json:"clients,omitempty"`
+	IsVisible      *bool        `gorm:"not null" json:"is_visible" binding:"required"`
+	ServerDate     uint         `gorm:"autoCreateTime" json:"server_date,omitempty"`
+	LastUpdateDate uint         `gorm:"autoUpdateTime" json:"last_Update_date,omitempty"`
+	LastSyncDate   uint         `json:"last_sync_date,omitempty"`
 }
 
 func (r *Server) ID() string {
 	return strconv.Itoa(r.ServerID)
 }
 
-type ServerStatus int
+type ServerStatus string
 
 const (
-	StatusOnline  ServerStatus = 1
-	StatusOffline ServerStatus = 2
-	StatusHidden  ServerStatus = 3
-	StatusCrashed ServerStatus = 4
+	StatusOnline  = "online"
+	StatusOffline = "offline"
+	StatusHidden  = "hidden"
+	StatusCrashed = "crashed"
 )
 
 func (st ServerStatus) IsValid() bool {
@@ -66,27 +69,10 @@ func (st ServerStatus) IsHidden() bool {
 	return st == StatusHidden
 }
 
-func (s *Server) SetPowerStatus(status ServerStatus) error {
-	switch status {
-	case StatusOnline:
-		if s.ServerState == StatusOnline {
-			return nil
-		}
-		return nil
-	case StatusOffline:
-		if s.ServerState == StatusOffline {
-			return nil
-		}
-		return nil
-	case StatusHidden:
-		return nil
-	case StatusCrashed:
-		if s.ServerState != StatusCrashed {
-			return nil
-		}
-		s.ServerState = StatusCrashed
-		return nil
-	}
-	//s.ServerState =
-	return nil
+func (s *Server) GetPowerStatus() ServerStatus {
+	return s.ServerState
+}
+
+func (s *Server) SetPowerStatus(status ServerStatus) {
+	s.ServerState = status
 }
